package com.clt.matlink.modules.system.employee.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.system.employee.domain.entity.Employee;

public interface EmployeeMapper extends BaseMapperPlus<Employee,Employee> {
}
